# AutoResearch_Diffusion_Model

./: .gitignore  BASELINE_PHASE1.md  README.md  eval_bend.py  eval_coding_vs_intergenomic_timeline.py  eval_stage1_gb.py  finetune_all_gb.py  finetune_coding_vs_intergenomic.py  plot_gb_evolution.py  prepare.py  program.md  pyproject.toml  results.tsv  results_phase3.tsv  test_smoke.py  test_torchrun_debug.py  train.py  train_nucel.py  train_phase3.py  train_phase4.py  train_v2.py
configs/: ds_config_zero0.json  stage2_default.json
experiments/: bench_bs_8192.py  test_bs3.py  test_bs4.py  test_bs4_ga.py  test_dual_bs3.py  test_dual_bs3_fixed.py  test_dual_bs3_optimized.py  test_dual_bs3_v2.py  test_dual_bs3_v3.py  test_dual_bs3_v4.py  test_smoke.py
legacy/: main.py  reeval_phase4.py  run_v41.py  train_phase3.py  train_phase4_2.py  train_v1.py  train_v42_stage2.py
results/: bend_results.npy  coding_vs_intergenomic_timeline.npy  finetune_all_gb.npy  finetune_coding_vs_intergenomic.npy  gb_summary.npy  results_nucel.tsv  results_phase4.tsv  results_phase4_2.tsv  results_v2.tsv  results_v41_full_gb.tsv  stage1_gb_results.npy
scripts/: run_stage2_dual.sh
src/: __init__.py  data.py  eval.py  model.py  schedule.py  tokenizer.py
wandb/: latest-run
wandb/run-20260423_111643-y915romr/: run-y915romr.wandb
wandb/run-20260423_111643-y915romr/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260423_112131-3j1m7wk4/files/: wandb-metadata.json
wandb/run-20260423_112154-fyhwsjws/files/: wandb-metadata.json
(+5 files in other folders)
