[project]
name = "autoresearch-diffusion"
version = "0.1.0"
description = "Autonomous DNA diffusion model research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "biopython>=1.84",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "transformers>=5.5.4",
    "datasets>=4.8.4",
    "genomic-benchmarks>=1.0.0",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "scikit-learn>=1.8.0",
    "muon-optimizer>=0.1.0",
    "mamba-ssm>=2.3.1",
    "performer-pytorch>=1.1.4",
    "flash-linear-attention>=0.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
